ensure bg image is visible through longform on mobile

--- a/express/code/blocks/faqv2/faqv2.css
+++ b/express/code/blocks/faqv2/faqv2.css
@@ -16,6 +16,7 @@
   margin-bottom: 0;
   border-radius: 0;
   position: relative;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 
 .faqv2.expandable.longform .faqv2-wrapper .faqv2-toggle {
